--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
         </p>
         <div class="hero-cta">
             <a href="#featured" class="btn btn-primary">立即体验</a>
-            <a href="mobile.html" class="btn btn-mobile">
+            <a href="mobile/" class="btn btn-mobile">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
                     <rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect>
                     <line x1="12" y1="18" x2="12.01" y2="18"></line>
