feat: 添加字体规范部分

--- a/00-design-system/index.html
+++ b/00-design-system/index.html
@@ -223,6 +223,85 @@
             border-radius: 50%;
         }
 
+        /* 字体规范 */
+        .typography {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+        }
+
+        .type-card {
+            background: #f5f5f7;
+            border-radius: 16px;
+            padding: 24px 28px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        @media (max-width: 734px) {
+            .type-card {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 12px;
+            }
+        }
+
+        .type-sample {
+            color: #1d1d1f;
+            font-family: "Inter", "Noto Sans SC", -apple-system, BlinkMacSystemFont, sans-serif;
+        }
+
+        .type-info {
+            text-align: right;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+
+        @media (max-width: 734px) {
+            .type-info { text-align: left; }
+        }
+
+        .type-name {
+            font-size: 14px;
+            font-weight: 600;
+            color: #1d1d1f;
+        }
+
+        .type-spec {
+            font-size: 12px;
+            color: #86868b;
+        }
+
+        .type-usage {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            margin-top: 24px;
+        }
+
+        .usage-item {
+            background: #fff;
+            border: 1px solid rgba(0,0,0,0.08);
+            border-radius: 12px;
+            padding: 12px 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 4px;
+        }
+
+        .usage-label {
+            font-size: 13px;
+            color: #86868b;
+        }
+
+        .usage-value {
+            font-size: 14px;
+            font-weight: 600;
+            color: #0071e3;
+        }
+
         /* 参数 */
         .params {
             display: grid;
@@ -403,6 +482,69 @@
             <span class="color-tag"><span class="color-dot" style="background: #F6BD16;"></span>警告/注意</span>
             <span class="color-tag"><span class="color-dot" style="background: #E86452;"></span>危险/下降</span>
             <span class="color-tag"><span class="color-dot" style="background: #5B8FF9;"></span>信息/中性</span>
+        </div>
+    </section>
+
+    <section>
+        <h2 class="section-title">字体规范</h2>
+        <div class="typography">
+            <div class="type-card">
+                <div class="type-sample" style="font-size: 48px; font-weight: 700; letter-spacing: -0.02em;">Aa 标题</div>
+                <div class="type-info">
+                    <span class="type-name">Display / 大标题</span>
+                    <span class="type-spec">Inter / Noto Sans SC · 700 · 36-48px</span>
+                </div>
+            </div>
+            <div class="type-card">
+                <div class="type-sample" style="font-size: 28px; font-weight: 600;">Aa 章节标题</div>
+                <div class="type-info">
+                    <span class="type-name">Heading / 标题</span>
+                    <span class="type-spec">Inter / Noto Sans SC · 600 · 20-28px</span>
+                </div>
+            </div>
+            <div class="type-card">
+                <div class="type-sample" style="font-size: 17px; font-weight: 500;">Aa 正文内容 Body Text</div>
+                <div class="type-info">
+                    <span class="type-name">Body / 正文</span>
+                    <span class="type-spec">Inter / Noto Sans SC · 400-500 · 14-17px</span>
+                </div>
+            </div>
+            <div class="type-card">
+                <div class="type-sample" style="font-size: 12px; font-weight: 400; color: #86868b;">Aa 图表标签 Chart Labels</div>
+                <div class="type-info">
+                    <span class="type-name">Caption / 标签</span>
+                    <span class="type-spec">Inter / Noto Sans SC · 400 · 10-12px</span>
+                </div>
+            </div>
+            <div class="type-card">
+                <div class="type-sample" style="font-family: 'SF Mono', Monaco, 'Courier New', monospace; font-size: 14px;">const value = 12,345.67</div>
+                <div class="type-info">
+                    <span class="type-name">Mono / 代码数值</span>
+                    <span class="type-spec">SF Mono / Monaco · 400 · 12-14px</span>
+                </div>
+            </div>
+        </div>
+        <div class="type-usage">
+            <div class="usage-item">
+                <span class="usage-label">图表标题</span>
+                <span class="usage-value">14-16px · 600</span>
+            </div>
+            <div class="usage-item">
+                <span class="usage-label">坐标轴标签</span>
+                <span class="usage-value">10-12px · 400</span>
+            </div>
+            <div class="usage-item">
+                <span class="usage-label">数据标签</span>
+                <span class="usage-value">10-11px · 500</span>
+            </div>
+            <div class="usage-item">
+                <span class="usage-label">图例文字</span>
+                <span class="usage-value">11-12px · 400</span>
+            </div>
+            <div class="usage-item">
+                <span class="usage-label">Tooltip</span>
+                <span class="usage-value">12-13px · 400</span>
+            </div>
         </div>
     </section>
 
