同步移动端样式：确保移动端筛选面板尺寸与PC端一致，完整显示所有内容

--- a/18-table/index.html
+++ b/18-table/index.html
@@ -366,42 +366,44 @@
                 padding: 6px 8px;
             }
             .filter-panel-body {
-                padding: 6px;
-                max-height: calc(75vh - 80px);
+                padding: 12px;
             }
             .filter-dimension {
-                margin-bottom: 6px;
+                margin-bottom: 12px;
             }
             .filter-dimension-header {
-                padding: 5px 3px;
+                padding: 6px 4px;
             }
             .filter-dimension-content {
-                padding: 4px 3px 6px;
+                padding: 8px 4px 10px;
             }
             .filter-options {
-                gap: 3px;
+                gap: 6px;
             }
             .filter-option {
-                padding: 3px 6px;
-                font-size: 10px;
+                padding: 5px 12px;
+                font-size: 11px;
+                height: 28px;
             }
             .filter-range {
-                gap: 3px;
+                gap: 8px;
             }
             .filter-range-input {
-                padding: 3px 5px;
-                font-size: 10px;
+                padding: 5px 8px;
+                font-size: 11px;
+                height: 28px;
             }
             .filter-range span {
-                font-size: 9px;
+                font-size: 11px;
             }
             .filter-panel-footer {
-                padding: 5px 6px;
-                gap: 5px;
+                padding: 10px 12px;
+                gap: 8px;
             }
             .filter-btn {
-                padding: 3px 8px;
-                font-size: 10px;
+                padding: 6px 16px;
+                font-size: 11px;
+                height: 32px;
             }
             .demo-table th, .demo-table td {
                 padding: 10px 12px;
