--- a/01-column/index.html
+++ b/01-column/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@antv/g2plot@2.4.31/dist/g2plot.min.js"></script>
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
+    <script src="../unified-filter.js"></script>
 </head>
 <body>
 
@@ -72,24 +73,72 @@
                 </div>
             </div>
             <div class="chart-filters">
-                <div class="filter-item">
-                    <span class="filter-label">按</span>
-                    <select class="filter-select">
-                        <option>地区</option>
-                        <option>产品</option>
-                        <option>渠道</option>
-                    </select>
-                    <span class="filter-label">× 分组</span>
+                <div class="filter-wrapper">
+                    <button class="filter-unified-btn" onclick="toggleFilterPanel(event)">
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+                        </svg>
+                        筛选
+                        <span class="filter-count" id="filterCount">0</span>
+                    </button>
+                    <!-- 统一筛选面板 -->
+                    <div class="filter-modal" id="filterModal" onclick="event.stopPropagation()">
+                        <div class="filter-panel">
+                            <div class="filter-panel-header" id="filterPanelHeader">
+                                <div class="filter-panel-title">
+                                    <div class="filter-panel-drag-handle">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <circle cx="9" cy="5" r="1"></circle>
+                                            <circle cx="9" cy="12" r="1"></circle>
+                                            <circle cx="9" cy="19" r="1"></circle>
+                                            <circle cx="15" cy="5" r="1"></circle>
+                                            <circle cx="15" cy="12" r="1"></circle>
+                                            <circle cx="15" cy="19" r="1"></circle>
+                                        </svg>
+                                    </div>
+                                    筛选
+                                </div>
+                                <button class="filter-panel-close" onclick="closeFilterPanel()">×</button>
+                            </div>
+                            <div class="filter-panel-body">
+                                <div class="filter-dimension collapsed">
+                                    <div class="filter-dimension-header" onclick="toggleFilterDimension(this)">
+                                        <div class="filter-dimension-title">地区</div>
+                                        <span class="filter-dimension-toggle">▶</span>
+                                    </div>
+                                    <div class="filter-dimension-content">
+                                        <div class="filter-options" id="filterRegion">
+                                            <div class="filter-option" data-value="华东区" onclick="toggleFilterOption(this, 'region', '华东区')">华东区</div>
+                                            <div class="filter-option" data-value="华北区" onclick="toggleFilterOption(this, 'region', '华北区')">华北区</div>
+                                            <div class="filter-option" data-value="华南区" onclick="toggleFilterOption(this, 'region', '华南区')">华南区</div>
+                                            <div class="filter-option" data-value="华中区" onclick="toggleFilterOption(this, 'region', '华中区')">华中区</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="filter-dimension collapsed">
+                                    <div class="filter-dimension-header" onclick="toggleFilterDimension(this)">
+                                        <div class="filter-dimension-title">日期</div>
+                                        <span class="filter-dimension-toggle">▶</span>
+                                    </div>
+                                    <div class="filter-dimension-content">
+                                        <div class="filter-options" id="filterDate">
+                                            <div class="filter-option" data-value="2024.12" onclick="toggleFilterOption(this, 'date', '2024.12')">2024.12</div>
+                                            <div class="filter-option" data-value="2024.11" onclick="toggleFilterOption(this, 'date', '2024.11')">2024.11</div>
+                                            <div class="filter-option" data-value="2024.10" onclick="toggleFilterOption(this, 'date', '2024.10')">2024.10</div>
+                                            <div class="filter-option" data-value="2024年Q4" onclick="toggleFilterOption(this, 'date', '2024年Q4')">2024年Q4</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="filter-panel-footer">
+                                <button class="filter-btn filter-btn-reset" onclick="resetFilters()">重置</button>
+                                <button class="filter-btn filter-btn-apply" onclick="applyFilters()">应用</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="filter-item">
-                    <span class="filter-label">日期:</span>
-                    <select class="filter-select">
-                        <option>2024.12</option>
-                        <option>2024.11</option>
-                        <option>2024.10</option>
-                        <option>2024年Q4</option>
-                    </select>
-                </div>
+                <!-- 筛选摘要 -->
+                <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
         <div class="chart-body md">
@@ -441,6 +490,20 @@ new Column('chart-grouped', {
 
 // 初始化响应式
 ChartSpec.init();
+
+// 初始化统一筛选系统
+document.addEventListener('DOMContentLoaded', function() {
+    initUnifiedFilter({
+        dimensions: [
+            { key: 'region', type: 'multi' },
+            { key: 'date', type: 'multi' }
+        ],
+        onApply: function(state) {
+            console.log('筛选已应用:', state);
+            // 这里可以添加图表数据筛选逻辑
+        }
+    });
+});
 </script>
 
 <script src="../nav.js"></script>
