统一图例设计：左对齐，所有标记统一为方形

--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="chart-body md" style="position: relative;">
-            <!-- 图例统一在右侧 -->
+            <!-- 图例统一在左侧对齐 -->
             <div class="custom-legend">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
