--- a/08-scatter/index.html
+++ b/08-scatter/index.html
@@ -81,11 +81,11 @@
             <!-- 自定义图例 -->
             <div class="custom-legend">
                 <div class="legend-item">
-                    <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
+                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
                     <span class="legend-text">线上</span>
                 </div>
                 <div class="legend-item">
-                    <span class="legend-icon-circle" style="background: #5AD8A6;"></span>
+                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
                     <span class="legend-text">线下</span>
                 </div>
             </div>
