修复筛选系统bug：正确处理null检查，修复event参数传递

--- a/01-column/index.html
+++ b/01-column/index.html
@@ -82,7 +82,7 @@
                         <span class="filter-count" id="filterCount">0</span>
                     </button>
                     <!-- 统一筛选面板 -->
-                    <div class="filter-modal" id="filterModal" onclick="event.stopPropagation()">
+                    <div class="filter-modal" id="filterModal" onclick="(function(e){e.stopPropagation();})(event)">
                         <div class="filter-panel">
                             <div class="filter-panel-header" id="filterPanelHeader">
                                 <div class="filter-panel-title">
