--- a/06-pie/index.html
+++ b/06-pie/index.html
@@ -65,7 +65,7 @@
                         筛选
                         <span class="filter-count" id="filterCount">0</span>
                     </button>
-                    <div class="filter-modal" id="filterModal" onclick="event.stopPropagation()">
+                    <div class="filter-modal" id="filterModal" onclick="(function(e){e.stopPropagation();})(event)">
                         <div class="filter-panel">
                             <div class="filter-panel-header" id="filterPanelHeader">
                                 <div class="filter-panel-title">
