--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -6,6 +6,7 @@
     <title>指标卡 - 图表设计规范</title>
     <link rel="stylesheet" href="../common.css">
     <script src="../responsive-spec.js"></script>
+    <script src="../unified-filter.js"></script>
     <style>
         .chart-type-badge {
             display: inline-flex; align-items: center; gap: 8px;
@@ -152,25 +153,70 @@
                 <span class="chart-meta-item"><span class="dot" style="background:#5B8FF9"></span>数据周期: 2024年12月</span>
             </div>
         </div>
-        <div class="chart-filters">
-            <div class="filter-item">
-                <span class="filter-label">按</span>
-                <select class="filter-select">
-                    <option>月度</option>
-                    <option>季度</option>
-                    <option>年度</option>
-                </select>
-                <span class="filter-label">× 分组</span>
+        
+            <div class="chart-filters">
+                <div class="filter-wrapper">
+                    <button class="filter-unified-btn" onclick="toggleFilterPanel(event)">
+                        <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+                        </svg>
+                        筛选
+                        <span class="filter-count" id="filterCount">0</span>
+                    </button>
+                    <div class="filter-modal" id="filterModal" onclick="(function(e){e.stopPropagation();})(event)">
+                        <div class="filter-panel">
+                            <div class="filter-panel-header" id="filterPanelHeader">
+                                <div class="filter-panel-title">
+                                    <div class="filter-panel-drag-handle">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                            <circle cx="9" cy="5" r="1"></circle>
+                                            <circle cx="9" cy="12" r="1"></circle>
+                                            <circle cx="9" cy="19" r="1"></circle>
+                                            <circle cx="15" cy="5" r="1"></circle>
+                                            <circle cx="15" cy="12" r="1"></circle>
+                                            <circle cx="15" cy="19" r="1"></circle>
+                                        </svg>
+                                    </div>
+                                    筛选
+                                </div>
+                                <button class="filter-panel-close" onclick="closeFilterPanel()">×</button>
+                            </div>
+                            <div class="filter-panel-body">
+                                <div class="filter-dimension collapsed">
+                                    <div class="filter-dimension-header" onclick="toggleFilterDimension(this)">
+                                        <div class="filter-dimension-title">维度</div>
+                                        <span class="filter-dimension-toggle">▶</span>
+                                    </div>
+                                    <div class="filter-dimension-content">
+                                        <div class="filter-options" id="filterDimension">
+                                            <div class="filter-option" data-value="月度" onclick="toggleFilterOption(this, 'dimension', '月度')">月度</div>
+                                            <div class="filter-option" data-value="季度" onclick="toggleFilterOption(this, 'dimension', '季度')">季度</div>
+                                            <div class="filter-option" data-value="年度" onclick="toggleFilterOption(this, 'dimension', '年度')">年度</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="filter-dimension collapsed">
+                                    <div class="filter-dimension-header" onclick="toggleFilterDimension(this)">
+                                        <div class="filter-dimension-title">日期</div>
+                                        <span class="filter-dimension-toggle">▶</span>
+                                    </div>
+                                    <div class="filter-dimension-content">
+                                        <div class="filter-options" id="filterDate">
+                                            <div class="filter-option" data-value="2024.12" onclick="toggleFilterOption(this, 'date', '2024.12')">2024.12</div>
+                                            <div class="filter-option" data-value="2024.Q4" onclick="toggleFilterOption(this, 'date', '2024.Q4')">2024.Q4</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="filter-panel-footer">
+                                <button class="filter-btn filter-btn-reset" onclick="resetFilters()">重置</button>
+                                <button class="filter-btn filter-btn-apply" onclick="applyFilters()">应用</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="filter-summary" id="filterSummary"></div>
             </div>
-            <div class="filter-item">
-                <span class="filter-label">日期:</span>
-                <select class="filter-select">
-                    <option>2024.12</option>
-                    <option>2024.Q4</option>
-                    <option>2024年度</option>
-                </select>
-            </div>
-        </div>
     </div>
     <div class="indicator-grid">
         <div class="indicator-card blue">
@@ -331,6 +377,19 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
 <script>
 // 初始化响应式
 ChartSpec.init();
+
+// 初始化统一筛选系统
+document.addEventListener('DOMContentLoaded', function() {
+    initUnifiedFilter({
+        dimensions: [
+            { key: 'dimension', type: 'multi' },
+            { key: 'date', type: 'multi' }
+        ],
+        onApply: function(state) {
+            console.log('筛选已应用:', state);
+        }
+    });
+});
 </script>
 <script src="../nav.js"></script>
 </body>
