--- a/01-column/index.html
+++ b/01-column/index.html
@@ -483,7 +483,7 @@ new Column('chart-grouped', {
         },
         marker: {
             symbol: 'square',
-            style: { r: 5 },
+            style: { r: 4 }, // 统一使用方形标记，统一尺寸
         },
     },
 }).render();
