--- a/06-pie/index.html
+++ b/06-pie/index.html
@@ -319,7 +319,11 @@ new Pie('chart-basic', {
     radius: radius,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
     label: { type: 'outer', content: '{name} {percentage}', style: { fontSize: labelFontSize }, offset: labelOffset },
-    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
+    legend: { 
+        position: 'right', 
+        itemName: { style: { fontSize: mobile ? 9 : 11 } },
+        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+    },
     interactions: [{ type: 'element-active' }],
 }).render();
 
@@ -331,7 +335,11 @@ new Pie('chart-donut', {
     innerRadius: 0.6,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
     label: { type: 'inner', offset: '-50%', content: '{percentage}', style: { fontSize: mobile ? 8 : 10, textAlign: 'center', fill: '#fff' } },
-    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
+    legend: { 
+        position: 'right', 
+        itemName: { style: { fontSize: mobile ? 9 : 11 } },
+        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+    },
     statistic: {
         title: { content: '总计', style: { fontSize: mobile ? 10 : 11 } },
         content: { content: '13,000', style: { fontSize: mobile ? 14 : 16 } },
@@ -345,7 +353,11 @@ new Rose('chart-rose', {
     seriesField: 'type',
     radius: mobile ? 0.88 : 0.9,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#E86452', '#945FB9'],
-    legend: { position: 'right', itemName: { style: { fontSize: mobile ? 9 : 11 } } },
+    legend: { 
+        position: 'right', 
+        itemName: { style: { fontSize: mobile ? 9 : 11 } },
+        marker: { symbol: 'square', style: { r: 4 } } // 统一使用方形标记
+    },
 }).render();
 
 // 初始化响应式
