继续统一图例设计：更新折线图和环图的图例配置，添加环图筛选初始化

--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -385,6 +385,19 @@ document.addEventListener('DOMContentLoaded', function() {
         }
     });
 });
+
+// 初始化统一筛选系统
+document.addEventListener('DOMContentLoaded', function() {
+    initUnifiedFilter({
+        dimensions: [
+            { key: 'dimension', type: 'multi' },
+            { key: 'date', type: 'multi' }
+        ],
+        onApply: function(state) {
+            console.log('筛选已应用:', state);
+        }
+    });
+});
 </script>
 
 </body>
