统一折线图图例为方形标记

--- a/04-line/index.html
+++ b/04-line/index.html
@@ -427,8 +427,8 @@ new Line('chart-multi', {
             style: { fontSize: legendFontSize, fill: '#1D1D1F' },
         },
         marker: {
-            symbol: 'line',
-            style: { r: 5 },
+            symbol: 'square', // 统一使用方形标记
+            style: { r: 4 },
         },
     },
     xAxis: {
