统一26图表靠右对齐：图例和标签统一靠右，不遮挡图表内容

--- a/05-area/index.html
+++ b/05-area/index.html
@@ -125,8 +125,8 @@
             </div>
         </div>
         <div class="chart-body md" style="position: relative;">
-            <!-- 轴单位标签 -->
-            <div class="axis-unit y-left">访问量</div>
+            <!-- 轴单位标签 - 靠右，不遮挡图表 -->
+            <div class="axis-unit y-right">访问量</div>
             
             <!-- 自定义图例 -->
             <div class="custom-legend">
