--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="chart-body md" style="position: relative;">
-            <!-- 图例统一在左侧对齐 -->
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
