批量更新所有图表：Y轴单位标签统一靠右，不遮挡图表

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -121,7 +121,7 @@
             </div>
         </div>
         <div class="chart-body md">
-            <div class="axis-unit y-left">缺陷数</div>
+            <div class="axis-unit y-right">缺陷数</div>
             <div class="axis-unit y-right">%</div>
             <div class="custom-legend">
                 <div class="legend-item">
