--- a/22-dual-axes/index.html
+++ b/22-dual-axes/index.html
@@ -130,8 +130,8 @@
             </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
-            <div class="axis-unit y-left">万元</div>
-            <div class="axis-unit y-right">%</div>
+            <div class="axis-unit y-right">万元</div>
+            <div class="axis-unit y-right" style="right: 40px;">%</div>
             <div class="custom-legend">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
