--- a/01-column/index.html
+++ b/01-column/index.html
@@ -142,7 +142,7 @@
             </div>
         </div>
         <div class="chart-body md">
-            <div class="axis-unit y-left">万元</div>
+            <div class="axis-unit y-right">万元</div>
             <div class="x-field-label">按地区</div>
             <div class="custom-legend">
                 <div class="legend-item">
