--- a/02-stacked-column/index.html
+++ b/02-stacked-column/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="chart-body md" style="position: relative;">
-            <div class="axis-unit y-left">万元</div>
+            <div class="axis-unit y-right">万元</div>
             <div class="x-field-label">按月份</div>
             <div class="custom-legend">
                 <div class="legend-item">
