--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
-            <div class="axis-unit y-left">单位：台</div>
+            <div class="axis-unit y-right">单位：台</div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
             <div class="hover-hint">悬停查看标注详情</div>
             <div class="hover-hint">悬停查看标注</div>
