更新热力图：Y轴标签靠右

--- a/16-heatmap/index.html
+++ b/16-heatmap/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="chart-body md" style="position: relative;">
             <!-- 轴单位标签 -->
-            <div class="axis-unit y-left">访问量</div>
+            <div class="axis-unit y-right">访问量</div>
             
             <!-- X轴字段标签 -->
             <div class="x-field-label">小时</div>
