--- a/24-sunburst/index.html
+++ b/24-sunburst/index.html
@@ -123,6 +123,29 @@
             </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
+            <div class="custom-legend">
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-text">研发中心</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-text">产品部</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #F6BD16;"></span>
+                    <span class="legend-text">销售部</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #945FB9;"></span>
+                    <span class="legend-text">运营部</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #E86452;"></span>
+                    <span class="legend-text">职能部门</span>
+                </div>
+            </div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
         </div>
         <div class="chart-summary">
