--- a/25-sankey/index.html
+++ b/25-sankey/index.html
@@ -123,6 +123,26 @@
             </div>
         </div>
         <div class="chart-body xl" style="position: relative;">
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
+            <!-- 显示主要节点类型的颜色对应关系 -->
+            <div class="custom-legend">
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-text">流量来源</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-text">着陆页</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #F6BD16;"></span>
+                    <span class="legend-text">用户行为</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #945FB9;"></span>
+                    <span class="legend-text">转化结果</span>
+                </div>
+            </div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
         </div>
         <div class="chart-summary">
