--- a/15-wordcloud/index.html
+++ b/15-wordcloud/index.html
@@ -129,7 +129,31 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body md">
+        <div class="chart-body md" style="position: relative;">
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
+            <!-- 显示主要颜色对应关系 -->
+            <div class="custom-legend">
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-text">高频词</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5AD8A6;"></span>
+                    <span class="legend-text">中高频词</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #FF9500;"></span>
+                    <span class="legend-text">中频词</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #FF3B30;"></span>
+                    <span class="legend-text">中低频词</span>
+                </div>
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5856D6;"></span>
+                    <span class="legend-text">低频词</span>
+                </div>
+            </div>
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
         </div>
         <!-- 汇总栏 -->
