--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -126,6 +126,15 @@
         </div>
         <div class="chart-body lg" style="position: relative;">
             <div class="axis-unit y-right">单位：台</div>
+            
+            <!-- 图例统一在右侧对齐，不遮挡图表 -->
+            <div class="custom-legend">
+                <div class="legend-item">
+                    <span class="legend-icon-square" style="background: #5B8FF9;"></span>
+                    <span class="legend-text">销量</span>
+                </div>
+            </div>
+            
             <div id="chart-basic" style="width: 100%; height: 100%;"></div>
             <div class="hover-hint">悬停查看标注详情</div>
             <div class="annotation-layer">
