修正标签位置：Y轴单位标签移到左侧Y轴附近（左上角），X轴字段标签移到左下角与X轴对齐

--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <div class="chart-body lg" style="position: relative;">
-            <div class="axis-unit y-right">单位：台</div>
+            <div class="axis-unit y-left">单位：台</div>
             
             <!-- 图例统一在右侧对齐，不遮挡图表 -->
             <div class="custom-legend">
