--- a/09-bubble/index.html
+++ b/09-bubble/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="chart-body md" style="position: relative;">
             <!-- 轴单位标签 -->
-            <div class="axis-unit y-right">销量</div>
+            <div class="axis-unit y-left">销量</div>
             
             <!-- 自定义图例 -->
             <div class="custom-legend">
