--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -121,8 +121,8 @@
             </div>
         </div>
         <div class="chart-body md">
-            <div class="axis-unit y-right">缺陷数</div>
-            <div class="axis-unit y-right">%</div>
+            <div class="axis-unit y-left">缺陷数</div>
+            <div class="axis-unit y-left" style="top: 30px;">%</div>
             <div class="custom-legend">
                 <div class="legend-item">
                     <span class="legend-icon-square" style="background: #5B8FF9;"></span>
