--- a/04-line/index.html
+++ b/04-line/index.html
@@ -122,7 +122,7 @@
             </div>
         </div>
         <div class="chart-body md">
-            <div class="axis-unit y-right">万元</div>
+            <div class="axis-unit y-left">万元</div>
             <div class="x-field-label">按月份</div>
             <div class="custom-legend">
                 <div class="legend-item">
