修复环形图标签超出边界问题：将offset从-30%调整为-50%，确保所有数字标签都在环形内部

--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -194,7 +194,7 @@
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
         type: 'inner',
-        offset: '-30%', // 调整偏移量，确保标签居中显示
+        offset: '-50%', // 调整偏移量，确保标签在环形内部，不会超出边界
         content: ({ percent }) => {
             const percentage = (percent * 100).toFixed(0);
             return percentage + '%';
@@ -314,7 +314,7 @@ new G2Plot.Pie('chart-basic', {
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
         type: 'inner',
-        offset: '-30%', // 调整偏移量，确保标签居中显示
+        offset: '-50%', // 调整偏移量，确保标签在环形内部，不会超出边界
         content: ({ percent }) => {
             const percentage = (percent * 100).toFixed(0);
             return percentage + '%';
