调整图表布局：减少右侧padding，让图表向右扩展，尺寸更大，右边缘对齐到按地区标签位置

--- a/01-column/index.html
+++ b/01-column/index.html
@@ -198,7 +198,7 @@
     data: basicData,
     xField: 'region',
     yField: 'value',
-    padding: [40, 20, 50, 50],
+    padding: [40, 12, 50, 50], // 减少右侧padding，让图表向右扩展
     color: '#5B8FF9',
     columnWidthRatio: 0.5,
     columnStyle: { radius: [4, 4, 0, 0] },
@@ -305,7 +305,7 @@
     data: basicData,
     xField: 'region',
     yField: 'value',
-    padding: [40, 20, 50, 50],
+    padding: [40, 12, 50, 50], // 减少右侧padding，让图表向右扩展
     color: '#5AD8A6',
     columnWidthRatio: 0.5,
     columnStyle: { radius: [4, 4, 0, 0] },
@@ -346,7 +346,7 @@
     yField: 'value',
     seriesField: 'type',
     isGroup: true,
-    padding: [40, 20, 50, 50],
+    padding: [40, 12, 50, 50], // 减少右侧padding，让图表向右扩展
     color: ['#5B8FF9', '#5AD8A6'],
     columnWidthRatio: 0.6,
     columnStyle: { radius: [3, 3, 0, 0] },
