修复环形图内部数字标签位置：将offset从-60%调整为-70%，确保所有数字标签完全在环形内部，不会跑出来

--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -194,7 +194,7 @@
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
         type: 'inner',
-        offset: '-60%', // 增加负偏移量，让标签更靠近中心，确保在环形内部并居中对齐
+        offset: '-70%', // 进一步增加负偏移量，让标签更靠近中心，确保完全在环形内部，不会跑出来
         content: ({ percent }) => {
             const percentage = (percent * 100).toFixed(0);
             return percentage + '%';
@@ -315,7 +315,7 @@ new G2Plot.Pie('chart-basic', {
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
         type: 'inner',
-        offset: '-60%', // 增加负偏移量，让标签更靠近中心，确保在环形内部并居中对齐
+        offset: '-70%', // 进一步增加负偏移量，让标签更靠近中心，确保完全在环形内部，不会跑出来
         content: ({ percent }) => {
             const percentage = (percent * 100).toFixed(0);
             return percentage + '%';
