--- a/23-rose/index.html
+++ b/23-rose/index.html
@@ -170,7 +170,7 @@
     data,
     xField: 'type',
     yField: 'value',
-    colorField: 'type', // 添加colorField，确保每个分类使用不同颜色
+    seriesField: 'type', // 使用seriesField确保每个分类使用不同颜色
     radius: 0.9,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9', '#E86452'],
     
@@ -329,7 +329,7 @@ new G2Plot.Rose('chart-basic', {
     data,
     xField: 'type',
     yField: 'value',
-    colorField: 'type', // 添加colorField，确保每个分类使用不同颜色
+    seriesField: 'type', // 使用seriesField而不是colorField，确保每个分类使用不同颜色
     radius: radius,
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9', '#E86452'],
     sectorStyle: {
